[project]
name = "bdd-pytest"
version = "2.1.0"
description = "Enforceable test-level and Given/When/Then contracts for pytest"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mattias Wetterlind" }]
requires-python = ">=3.10"
dependencies = ["pytest>=8,<10", "pytest-timeout>=2.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/adelost/bdd-pytest"
Repository = "https://github.com/adelost/bdd-pytest"
Issues = "https://github.com/adelost/bdd-pytest/issues"

[project.optional-dependencies]
dev = ["build>=1.2", "ruff>=0.11"]

[project.entry-points.pytest11]
bdd_pytest = "bdd_pytest.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bdd_pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
bdd_level_policy = "error"
bdd_documentation_policy = "off"
markers = [
    "unit: fast unit tests (<100ms)",
    "component: component tests with mocked deps (<5s)",
    "integration: integration tests (<30s)",
    "e2e: end-to-end tests (<120s)",
    "timeout: pytest-timeout marker",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
